fix web not fitting the page

--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -1108,7 +1108,7 @@
           
           
           width:100vw;
-          height:fit-content;
+          height:100%;
           margin-top: -5rem;
           // padding: 1rem;
           
